# veritas

./: .gitignore  LICENSE  README.md  TRY-IT.md  pyproject.toml
docs/: ANALYSIS.md  CREATIVITY.md  DESIGN.md
examples/: end_to_end_demo.py
examples/mainnet-anchor/: README.md  anchor.py  make_address.py  sweep.py
examples/signet-anchor/: .gitignore  README.md  anchor.py  bech32.py  make_address.py
tests/: test_anchor.py  test_attestation.py  test_broadcast.py  test_crypto.py  test_lightning.py  test_lightning_real.py  test_merkle.py  test_nostr.py  test_oracle_e2e.py  test_reveal.py  test_verifier_adversarial.py
veritas/: __init__.py  anchor.py  attestation.py  broadcast.py  cli.py  crypto.py  lightning.py  merkle.py  models.py  nostr.py  oracle.py  server.py  verifier.py  web.py
